# boto-playground

./: Dockerfile  README.md  env.sample  pyproject.toml
.devcontainer/: devcontainer.json
glue/: get-create.py  get-resources.py  migrate.py
notebooks/: glue-notebook.ipynb  nb01.ipynb
quicksight/: clean-all.py  export-import.py  get-assets.py  migrate.py  test-01.py
